--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
   "version": "0.0.1",
   "author": "Dominic <dominic097@gmail.com>",
   "main": "",
-  "keywords": [
-
-  ],
+  "keywords": [],
   "repository": {
     "type": "git",
     "url": "git@github.com:dominic097/dS.git"
@@ -14,7 +12,9 @@
   "presets": [
     "es2016"
   ],
-  "dependencies": {},
+  "dependencies": {
+    "gitbook-plugin-advanced-emoji": "^0.2.1"
+  },
   "devDependencies": {
     "browserify": "^5.12.1",
     "eslint": "^3.10.2",
@@ -35,6 +35,6 @@
     "docs:prepare": "gitbook install",
     "docs:watch": "npm run docs:prepare && gitbook serve",
     "docs:build": "npm run docs:prepare && rm -rf _book && gitbook build",
-    "docs:publish": "npm run docs:build && cd _book && git init && git commit --allow-empty -m 'Update docs' && git checkout -b gh-pages && git add . && git commit -am 'Update docs' && git push git@github.com:dominic097/dS gh-pages --force"
+    "docs:publish": "npm run docs:build && cd _book && git init && git commit --allow-empty -m 'Update docs' && git checkout -b gh-pages && git add . && git commit -am 'Update docs' && git push git@github.com:dominic097/blog gh-pages --force"
   }
 }
